fix description overflow

--- a/frontend/src/components/ItemCard.css
+++ b/frontend/src/components/ItemCard.css
@@ -1,3 +1,8 @@
+.parentCard {
+	display: flex;
+	flex-direction: column;
+}
+
 .imageWrapper {
 	border-radius: 6px;
 	box-shadow: 0 4px 4px gray;
@@ -5,4 +10,9 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	padding-top: 100%;
+}
+
+.description {
+	overflow: hidden;
 }
